# py_canoe

./: README.md  pyproject.toml
src/py_canoe/: canoe.py
src/py_canoe/core/: application.py  configuration.py  networks.py
tests/: test_py_canoe.py  test_unit_network_names.py  test_unit_server_friendly.py
