[project]
name = "py-canoe"
version = "26.2.0"
description = "Python 🐍 Package for accessing Vector CANoe 🛶 Tool via COM Interface"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "chaitu-ycr", email = "chaitu.ycr@gmail.com" }]
keywords = ["Vector", "CANoe", "Python","Test", "Automation"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows"
]
dependencies = [
    "canmatrix[arxml,kcd,ldf,xls,xlsx,yaml,eds]",
    "pywin32",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-html",
    "pytest-sugar",
    "pytest-clarity",
    "pytest-cov",
    "pytest-watch",
    "mkdocs-puml",
    "mkdocs-exclude",
    "mkdocs-material",
    "mkdocs-jupyter",
    "mkdocstrings-python",
    "mkdocs-macros-plugin",
    "mkdocs-include-markdown-plugin",
]

[project.urls]
homepage = "https://github.com/chaitu-ycr/py-canoe"
repository = "https://github.com/chaitu-ycr/py-canoe"
documentation = "https://chaitu-ycr.github.io/py-canoe/"

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
