[project]
name = "py-canoe"
version = "26.2.7"
description = "Python 🐍 Package for accessing Vector CANoe 🛶 Tool via COM Interface"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "chaitu-ycr", email = "chaitu.ycr@gmail.com" }]
keywords = ["Vector", "CANoe", "Python","Test", "Automation"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows"
]
dependencies = [
    "pywin32",
]

[project.optional-dependencies]
robot = ["robotframework"]
database = ["canmatrix[arxml,kcd,ldf,xls,xlsx,yaml,eds]", "pandas"]
restapi = ["fastapi[standard]"]
plot = ["plotly", "pandas"]
report = ["datapane", "plotly", "pandas"]
all = [
    "robotframework",
    "fastapi[standard]",
    "canmatrix[arxml,kcd,ldf,xls,xlsx,yaml,eds]",
    "plotly", "pandas", "datapane",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-html",
    "pytest-sugar",
    "pytest-clarity",
    "pytest-cov",
    "pytest-watch",
    "mkdocs-puml",
    "mkdocs-exclude",
    "mkdocs-material<10",
    "mkdocs-jupyter",
    "mkdocstrings-python",
    "mkdocs-macros-plugin",
    "mkdocs-include-markdown-plugin",
]

[project.urls]
homepage = "https://github.com/chaitu-ycr/py-canoe"
repository = "https://github.com/chaitu-ycr/py-canoe"
documentation = "https://chaitu-ycr.github.io/py-canoe/"

[tool.uv]
package = true

[tool.pytest.ini_options]
markers = [
    "integration: Integration tests requiring CANoe COM interface",
    "unit: Unit tests with mocks (default)",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
